--- a/package.json
+++ b/package.json
@@ -83,58 +83,34 @@
   },
   "dependencies": {
     "@babel/polyfill": "~7.2",
-    "@riophae/vue-treeselect": "^0.4.0",
     "add": "^2.0.6",
     "animate.css": "^3.6.1",
-    "area-data": "^5.0.6",
     "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
     "choices.js": "^8.0.0",
-    "codemirror": "^5.42.2",
-    "cropperjs": "^1.3.2",
     "dayjs": "^1.8.15",
     "diff-match-patch": "^1.0.0",
-    "dom-autoscroller": "^2.3.4",
-    "dragula": "^3.7.2",
     "echarts": "^4.2.1",
     "echarts-liquidfill": "^2.0.5",
     "element-ui": "^2.14.1",
-    "file-saver": "^2.0.2",
-    "handsontable": "^8.0.0",
-    "html2canvas": "^1.0.0-rc.7",
-    "jsbarcode": "^3.11.0",
-    "jsqr": "^1.2.0",
-    "jwt-decode": "^2.2.0",
-    "leader-line": "^1.0.5",
     "localforage": "^1.6.0",
     "localforage-getitems": "^1.4.2",
-    "perfect-scrollbar": "^1.3.0",
     "prettier": "^1.19.1",
-    "printd": "^1.4.0",
     "promise.allsettled": "^1.0.2",
-    "qrcodejs2": "^0.0.2",
     "qs": "^6.5.1",
     "uppy": "^0.24.3",
-    "url-search-params-polyfill": "^5.0.0",
     "uuid": "^3.3.2",
     "vee-validate": "^2.2.15",
     "view-design": "^4.3.2",
     "viewerjs": "^1.3.7",
     "vue": "^2.6.10",
-    "vue-clamp": "^0.3.0",
-    "vue-clickaway": "^2.2.2",
     "vue-echarts": "^4.0.3",
     "vue-froala-wysiwyg": "^3.2.1-1",
-    "vue-howler": "^0.7.0",
     "vue-router": "^3.0.1",
-    "vue-silentbox": "^0.1.1",
     "vue-sweetalert2": "^1.2.4",
-    "vue-the-mask": "^0.11.1",
-    "vue-video-player": "^5.0.2",
-    "vuex": "^3.0.1",
-    "websocket": "^1.0.31"
+    "vuex": "^3.0.1"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
