--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.18.0",
     "stylelint-webpack-plugin": "^1.2.3",
+    "swiper": "^3.4.2",
     "uglifyjs-webpack-plugin": "~1.2",
     "url-loader": "0.6.2",
     "vue-loader": "~15.6",
@@ -106,6 +107,7 @@
     "view-design": "^4.3.2",
     "viewerjs": "^1.3.7",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-echarts": "^4.0.3",
     "vue-froala-wysiwyg": "^3.2.1-1",
     "vue-router": "^3.0.1",
