--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "~7.2",
+    "@jiaminghi/data-view": "^2.10.0",
     "add": "^2.0.6",
     "animate.css": "^3.6.1",
     "axios": "^0.21.1",
