--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-echarts": "^4.0.3",
     "vue-froala-wysiwyg": "^3.2.1-1",
+    "vue-photo-preview": "^1.1.3",
     "vue-router": "^3.0.1",
     "vue-sweetalert2": "^1.2.4",
     "vuex": "^3.0.1",
